@@ -130,6 +130,134 @@ name|SET_SIZE
 operator|-
 literal|1
 decl_stmt|;
+DECL|method|disableScoring
+specifier|private
+specifier|static
+name|BulkScorer
+name|disableScoring
+parameter_list|(
+specifier|final
+name|BulkScorer
+name|scorer
+parameter_list|)
+block|{
+return|return
+operator|new
+name|BulkScorer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|int
+name|score
+parameter_list|(
+specifier|final
+name|LeafCollector
+name|collector
+parameter_list|,
+name|int
+name|min
+parameter_list|,
+name|int
+name|max
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|LeafCollector
+name|noScoreCollector
+init|=
+operator|new
+name|LeafCollector
+argument_list|()
+block|{
+name|FakeScorer
+name|fake
+init|=
+operator|new
+name|FakeScorer
+argument_list|()
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|void
+name|setScorer
+parameter_list|(
+name|Scorer
+name|scorer
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|collector
+operator|.
+name|setScorer
+argument_list|(
+name|fake
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|collect
+parameter_list|(
+name|int
+name|doc
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|fake
+operator|.
+name|doc
+operator|=
+name|doc
+expr_stmt|;
+name|collector
+operator|.
+name|collect
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+return|return
+name|scorer
+operator|.
+name|score
+argument_list|(
+name|noScoreCollector
+argument_list|,
+name|min
+argument_list|,
+name|max
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|long
+name|cost
+parameter_list|()
+block|{
+return|return
+name|scorer
+operator|.
+name|cost
+argument_list|()
+return|;
+block|}
+block|}
+return|;
+block|}
 DECL|class|Bucket
 specifier|static
 class|class
@@ -688,6 +816,9 @@ name|scorers
 parameter_list|,
 name|int
 name|minShouldMatch
+parameter_list|,
+name|boolean
+name|needsScores
 parameter_list|)
 block|{
 if|if
@@ -797,6 +928,23 @@ range|:
 name|scorers
 control|)
 block|{
+if|if
+condition|(
+name|needsScores
+operator|==
+literal|false
+condition|)
+block|{
+comment|// OrCollector calls score() all the time so we have to explicitly
+comment|// disable scoring in order to avoid decoding useless norms
+name|scorer
+operator|=
+name|disableScoring
+argument_list|(
+name|scorer
+argument_list|)
+expr_stmt|;
+block|}
 specifier|final
 name|BulkScorerAndDoc
 name|evicted
